--- a/Balda/MainWindow.xaml
+++ b/Balda/MainWindow.xaml
@@ -3,10 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Balda"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        FontSize="15"   
+        FontFamily="/Balda;component/#Google Sans"
+        xmlns:local="clr-namespace:Balda"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Foreground="{DynamicResource MaterialDesignPaper}"
+        Background="{DynamicResource MaterialDesignBackground}"
+        Title="MainWindow" Height="800" Width="600">
+    <materialDesign:Transitioner SelectedIndex="0" AutoApplyTransitionOrigins="True">
+        <Grid>
+            <local:GameField />
+        </Grid>
+        <materialDesign:TransitionerSlide>
+            <materialDesign:TransitionerSlide.BackwardWipe>
+                <materialDesign:CircleWipe />
+            </materialDesign:TransitionerSlide.BackwardWipe>
+            <materialDesign:TransitionerSlide.ForwardWipe>
+                <materialDesign:SlideWipe Direction="Right" />
+            </materialDesign:TransitionerSlide.ForwardWipe>
+            <local:GameMenu />
+        </materialDesign:TransitionerSlide>
+    </materialDesign:Transitioner>
 </Window>
