--- a/Balda/Views/UserControls/GameField.xaml
+++ b/Balda/Views/UserControls/GameField.xaml
@@ -6,68 +6,211 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Balda"
              mc:Ignorable="d" 
-             FontFamily="/Balda;component/#Google Sans"
+             FontFamily="/Resources/Fonts/#Google Sans"
              Background="{DynamicResource MaterialDesignLightBackground}"
-             Foreground="{DynamicResource MaterialDesignLightForeground}"
+             Foreground="{DynamicResource MaterialDesignDarkBackground}"
              d:DesignHeight="800" d:DesignWidth="600">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Button Style="{StaticResource MaterialDesignIconButton}"
-                ToolTip="MaterialDesignIconButton"
+    <materialDesign:DialogHost x:Name="dialog" IsOpen="False">
+        <materialDesign:DialogHost.DialogContent>
+            <StackPanel>
+                <StackPanel Margin="16">
+                    <TextBlock Margin="0,0,0,5" Text="Бот 1 победил!" FontSize="20" HorizontalAlignment="Center" />
+                    <StackPanel
+        Orientation="Horizontal"
+        HorizontalAlignment="Right">
+                        <Button
+          Style="{StaticResource MaterialDesignFlatButton}"
+          IsDefault="True"
+          Margin="0 8 8 0"
+          Content="Новая игра">
+                            <Button.CommandParameter>
+                                <system:Boolean xmlns:system="clr-namespace:System;assembly=mscorlib">
+                                    True
+                                </system:Boolean>
+                            </Button.CommandParameter>
+                        </Button>
+                        <Button
+          Style="{StaticResource MaterialDesignFlatButton}"
+          IsCancel="True"
+          Margin="0 8 8 0"
+          Content="В меню"
+          Command="{x:Static materialDesign:Transitioner.MoveNextCommand}"
+          Click="Button_Click_1">
+                            <Button.CommandParameter>
+                                <system:Boolean xmlns:system="clr-namespace:System;assembly=mscorlib">
+                                    False
+                                </system:Boolean>
+                            </Button.CommandParameter>
+                        </Button>
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
+        </materialDesign:DialogHost.DialogContent>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Button Height="50" Click="Button_Click" Visibility="Visible"
+                    Command="{x:Static materialDesign:DialogHost.OpenDialogCommand }">
+                <TextBlock Text="Тестовая кнопка &#10;     (не в проде)" />
+            </Button>
+            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" HorizontalAlignment="Center">
+                <Button Style="{StaticResource MaterialDesignOutlinedButton}" Width="170"
+                ToolTip="Остановка игры"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
+                FontSize="15"
+                Content="Пауза"
                 Margin="5">
-            <materialDesign:PackIcon Kind="Pause" />
-        </Button>
-        <Button Style="{StaticResource MaterialDesignIconButton}"
-                Command="{x:Static materialDesign:Transitioner.MoveNextCommand}"
-                HorizontalAlignment="Center"
+                </Button>
+                <Button Style="{StaticResource MaterialDesignOutlinedButton}" Width="170"
+                ToolTip="Возврат в окно параметров, данные не будут сохранены"
+                HorizontalAlignment="Left"
                 VerticalAlignment="Top"
+                FontSize="15"
+                Content="Вернуться в меню"
+                Command="{x:Static materialDesign:Transitioner.MoveNextCommand}"
                 Margin="5">
-            <materialDesign:PackIcon Kind="Stop" />
-        </Button>
-        
-        <GroupBox x:Name="Bot2Status"
+                </Button>
+            </StackPanel>
+
+
+            <GroupBox x:Name="Bot2Status"
+                  Margin="5"
+                  Header=" Бот 1"
                   VerticalAlignment="Top"
-                  Margin="5"
-                  Header=" "
                   Grid.Column="2">
-            <StackPanel HorizontalAlignment="Center">
-                <TextBlock Text="Очков: " />
-                <TextBlock x:Name="Bot2ScoreBox" Text="21" HorizontalAlignment="Center" />
-            </StackPanel>
-        </GroupBox>
-        <TextBlock Text="Бот 2"
-                   Grid.Column="2"
-                   HorizontalAlignment="Center"
-                   Margin="0,14,0,0"
-                   Foreground="{ DynamicResource MaterialDesignPaper }"/>
+                <StackPanel HorizontalAlignment="Center">
+                    <TextBlock Text="Побед: " />
+                    <TextBlock Text="20" HorizontalAlignment="Center"/>
+                    <Separator/>
+                    <TextBlock Text="Очков: "/>
+                    <TextBlock x:Name="Bot2ScoreBox" Text="21" HorizontalAlignment="Center" />
+                </StackPanel>
+            </GroupBox>
 
-        <GroupBox x:Name="Bot1Status"
-                  VerticalAlignment="Bottom"
+            <GroupBox x:Name="Bot1Status"
                   Margin="5"
-                  Header=" "
+                  Header=" Бот 2"
+                  VerticalAlignment="Bottom"
                   Grid.Row="2">
-            <StackPanel HorizontalAlignment="Center">
-                <TextBlock Text="Очков: " />
-                <TextBlock x:Name="Bot1ScoreBox" Text="21" HorizontalAlignment="Center" />
-            </StackPanel>
-        </GroupBox>
-        <TextBlock Text="Бот 1"
-                   Grid.Row="2"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Top"
-                   Margin="0,126,0,0"
-                   Foreground="{ DynamicResource MaterialDesignPaper }"/>
+                <StackPanel HorizontalAlignment="Center">
+                    <TextBlock Text="Побед: " />
+                    <TextBlock Text="20" HorizontalAlignment="Center"/>
+                    <Separator/>
+                    <TextBlock Text="Очков: ">
+                    </TextBlock>
+                    <TextBlock x:Name="Bot1ScoreBox" Text="21" HorizontalAlignment="Center" />
+                </StackPanel>
+            </GroupBox>
+            <Border Grid.Row="1" Grid.Column="1" Width="80" Height="160" Background="{DynamicResource MaterialDesignDarkBackground}"
+                        CornerRadius="5" RenderTransformOrigin="0.5,0.5" >
+                <Border.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-39.027"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Border.RenderTransform>
+            </Border>
+            <Border Grid.Row="1" Grid.Column="1" Width="80" Height="160" Background="{DynamicResource MaterialDesignDarkBackground}"
+                        CornerRadius="5" RenderTransformOrigin="0.5,0.5">
+                <Border.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="64.036"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Border.RenderTransform>
+                <materialDesign:PackIcon Kind="Cards"
+                                             HorizontalAlignment="Center"
+                                             VerticalAlignment="Center"
+                                             Height="auto"
+                                             Width="60"
+                                             Foreground="{DynamicResource MaterialDesignBody}" />
+            </Border>
+            <Border Width="80" Height="160" Background="{DynamicResource MaterialDesignDarkBackground}"
+                        CornerRadius="5" Grid.Column="1" Margin="110,120" Grid.Row="1">
+                <materialDesign:PackIcon Kind="Cards"
+                                             HorizontalAlignment="Center"
+                                             VerticalAlignment="Center"
+                                             Height="auto"
+                                             Width="60"
+                                             Foreground="{DynamicResource MaterialDesignBody}" />
+            </Border>
+            <materialDesign:Flipper x:Name="Flipper" Grid.Column="1" Grid.Row="1" Width="80" Height="160"
+  materialDesign:ShadowAssist.ShadowDepth="Depth5" IsFlipped="False">
+                <materialDesign:Flipper.FrontContent>
+                    <Border Width="80" Height="160" Background="White">
+                        <Border Margin="1,1,1,1" Width="79" Height="159" Background="{DynamicResource MaterialDesignDarkBackground}"
+                        CornerRadius="5">
+                            <materialDesign:PackIcon Kind="Cards"
+                                             HorizontalAlignment="Center"
+                                             VerticalAlignment="Center"
+                                             Height="auto"
+                                             Width="60"
+                                             Foreground="{DynamicResource MaterialDesignBody}" />
+                        </Border>
+                    </Border>
+                </materialDesign:Flipper.FrontContent>
+                <materialDesign:Flipper.BackContent>
+                    <Border Width="80" Height="160" Background="White">
+                        <Border Margin="1,1,1,1" Width="79" Height="159" Background="{DynamicResource MaterialDesignDarkBackground}"
+                        CornerRadius="5">
+                            <StackPanel VerticalAlignment="Center">
+                                <TextBlock  Text="8" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           FontSize="50"/>
+                            </StackPanel>
+                        </Border>
+                    </Border>
+                </materialDesign:Flipper.BackContent>
+            </materialDesign:Flipper>
 
-    </Grid>
+            <StackPanel Grid.ColumnSpan="2" Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <materialDesign:PackIcon Kind="Cards" HorizontalAlignment="Center" VerticalAlignment="Center" Height="auto" Width="30" Foreground="{DynamicResource MaterialDesignBody}" />
+                </Border>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center">
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <TextBlock Text="9" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           FontSize="25"/>
+                </Border>
+                <Border Margin="5" Width="40" Height="80" Background="{DynamicResource MaterialDesignDarkBackground}" CornerRadius="5">
+                    <StackPanel VerticalAlignment="Center">
+                        <TextBlock  Text="1" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           FontSize="25"/>
+                        <Separator />
+                        <TextBlock Text="11" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           FontSize="15"/>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
+        </Grid>
+    </materialDesign:DialogHost>
 </UserControl>
